<resources>
    <string name="app_name">Flagomem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_restart">Restart</string>
    <string name="title_activity_battle_field">BattleFieldActivity</string>
    <string name="title_activity_rooms">RoomsActivity</string>
    <string name="title_botactivity">BotActivity</string>
    <string name="create">create</string>
    <string name="title_activity_room_battle_field">RoomBattleFieldActivity</string>
    <string name="step">Step:</string>
    <string name="score">Score:</string>
    <string name="record">Record:</string>
    <string name="time">Time:</string>
    <string name="restart">Restart</string>
    <string name="play">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="botplay">Play with bot</string>
    <string name="statistic">Local Statistic</string>
    <string name="topMultiplayer">Top Multiplayer</string>
    <string name="stopAds">Stop ads</string>
    <string name="xsmall">xS</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="large">L</string>
    <string name="xlarge">XL</string>
    <string name="xxlarge">XXL</string>
    <string name="userInfo">User info</string>
    <string name="back">Back</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="all">All</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="apply_button">Apply</string>
    <string name="playername">Name:</string>
    <string name="user_country">Country:</string>
    <string name="hintCountry">Country</string>
    <string name="title_activity_end_of_game">EndOfGameActivity</string>
    <string name="title_wait_user_activity">WaitUserActivity</string>
    <string name="congratulations">Congratulations!</string>
    <string name="win">Winner!</string>
    <string name="lose">Loser!</string>
    <string name="home">Home</string>
    <string name="versus">VS</string>
    <string name="actionLabel">Action:</string>
    <string name="online">On-line: </string>
    <string name="textSize">18sp</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="veryhard">Very hard</string>
    <string name="learninfo">Learn info</string>
    <string name="personal">Personal</string>
</resources>
