<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mishka.flagmemorine.activity.StartActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/play" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg1"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xsmall"
                android:id="@+id/xsmall"
                android:layout_gravity="left"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_weight="1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small"
                android:id="@+id/small"
                android:layout_gravity="left"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:id="@+id/medium"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:layout_row="1"
                android:layout_column="0"
                android:checked="false" />
        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rg2"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large"
                android:id="@+id/large"
                android:layout_weight="1.38"
                android:layout_gravity="left"
                android:layout_row="1"
                android:layout_column="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xlarge"
                android:id="@+id/xlarge"
                android:layout_weight="1.09"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="left" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxlarge"
                android:id="@+id/xxlarge"
                android:layout_weight="1"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="left|center_horizontal" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer"
            android:id="@+id/multiplayer"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistic"
            android:id="@+id/statistic"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopAds"
            android:id="@+id/stopAds"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userInfo"
            android:id="@+id/userInfo"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>
