<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/congratulations"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/stepEndOfGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/step"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/scoreEndOfGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/score"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/timeEndOfGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/time"
        android:textColor="@color/textColor"
        android:textSize="24sp" />
</LinearLayout>