<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/botLevelList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingEnd="5dp"
    android:paddingStart="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/easySwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/all_text"
            android:padding="10dp"
            android:text="@string/easy"
            android:thumbTint="@color/colorButton" />

        <Switch
            android:id="@+id/normalSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/all_text"
            android:padding="10dp"
            android:text="@string/normal"
            android:thumbTint="@color/colorButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/hardSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/all_text"
            android:padding="10dp"
            android:text="@string/hard"
            android:thumbTint="@color/colorButton" />

        <Switch
            android:id="@+id/veryhardSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/all_text"
            android:padding="10dp"
            android:text="@string/veryhard"
            android:thumbTint="@color/colorButton" />

    </LinearLayout>
</LinearLayout>