<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="@drawable/background_earth"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/basicLayout"
        android:layout_weight="1">
        <!--android:background="@drawable/politicheskaya_karta_europe"-->

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="test"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/restart" />

        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restart"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="7dp" />

        <TextView
            android:id="@+id/step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/step"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/restart"
            android:layout_marginStart="97dp" />

        <TextView
            android:id="@+id/userRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/step"
            android:layout_below="@+id/step"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/record" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/userRecord"
            android:layout_below="@+id/userRecord"
            android:layout_weight="1"
            android:text="@string/time" />

        <TextView
            android:id="@+id/timeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="test"
            android:layout_below="@+id/userRecord"
            android:layout_toEndOf="@+id/userRecord" />

        <TextView
            android:id="@+id/currentStepCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/timeValue"
            android:layout_weight="1"
            android:text="test" />

        <TextView
            android:id="@+id/recordStepCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="test"
            android:layout_below="@+id/currentStepCount"
            android:layout_alignStart="@+id/currentStepCount" />

    </RelativeLayout>

</LinearLayout>